--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "core-js": "^3.19.1",
     "date-fns": "^2.28.0",
     "enzyme": "^3.11.0",
+    "moment": "^2.29.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
